[package]
name = "fn-store"
description = "A dynamic persistent value store using closure type as key and storing its return value."
version = "0.1.5"
edition = "2021"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/storycraft/fn-store/"

[dependencies]
type-key = "1"
bumpalo = "3.13.0"
parking_lot = "0.12.1"
