[package]
name = "fn-map"
description = "Abstraction around HashMap. Uses closure to compute and store value."
keywords = ["typemap", "closure", "anymap", "hashmap"]
version = "0.1.0"
edition = "2021"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/storycraft/fn-map/"
categories = ["data-structures", "caching"]

[dependencies]
type-key = "1"
bumpalo = "3.13.0"
parking_lot = "0.12.1"
hashbrown = "0.14.0"
nohash-hasher = { version = "0.2.0", default-features = false }
